TWINS-697: Add null-check and unproxy logic in `TwinClassFieldRuleMapService`